--- a/dada/templates/send_email_screen.tmpl
+++ b/dada/templates/send_email_screen.tmpl
@@ -55,7 +55,7 @@
 	
 <div id="tabs"> 
 	
-	<ul>
+	<ul> 
 		<li>
 			<a href="#html_message">
 				HTML Version
@@ -67,10 +67,10 @@
 				</a>
 			</li>
 		</ul>
-	<div id="html_message"> 
+	<div id="html_message" style="display: block; border-width: 0; padding: 0em 0em; background: none;"> 
 	<!-- tmpl_include html_message_form_field_widget.tmpl --> 
 	</div>	
-	<div id="plaintext_message"> 
+	<div id="plaintext_message" style="display: block; border-width: 0; padding: 0em 0em; background: none;"> 
 	<!-- tmpl_include plaintext_message_form_field_widget.tmpl -->
 	</div>
 
