--- a/dada/templates/plaintext_message_form_field_widget.tmpl
+++ b/dada/templates/plaintext_message_form_field_widget.tmpl
@@ -1,1 +1,1 @@
-<textarea name="text_message_body" id="text_message_body" cols="80" rows="30"><!-- tmpl_var plaintext_message_body_content escape="HTML" --></textarea>
+<textarea name="text_message_body" id="text_message_body" style="width:95%;height:350px"><!-- tmpl_var plaintext_message_body_content escape="HTML" --></textarea>
