Trying my best to get this all in order.

--- a/dada/templates/admin_template.tmpl
+++ b/dada/templates/admin_template.tmpl
@@ -27,7 +27,7 @@
 <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/jquery-ui-1.9.1.custom.min.js"></script>
 
 <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/jquery.tablesorter.js"></script>
-<link rel="stylesheet" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/jquery.ui.all.css">
+<link rel="stylesheet" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/jquery-ui-1.9.1.custom.min.css">
 
 
 <!-- tmpl_if load_google_viz --> 
