Make sure the right JS is included...

--- a/dada/installer-disabled/templates/installer_extra_javascript_widget.tmpl
+++ b/dada/installer-disabled/templates/installer_extra_javascript_widget.tmpl
@@ -1,11 +1,11 @@
 <!-- begin installer_extra_javascript_widget.tmpl --> 
 
 <!-- jQuery -->
-<script src="<!-- tmpl_var Self_URL -->?f=screen&screen=installer-jquery-1.8.2.min.js"></script>
-<script>
+<script  type="text/javascript" src="<!-- tmpl_var Self_URL -->?f=screen&screen=installer-jquery-1.8.2.min.js"></script>
+<script  type="text/javascript">
 	var $jq = jQuery.noConflict();
 </script> 
-<script src="<!-- tmpl_var Self_URL -->?f=screen&screen=installer-jquery-ui.js"></script>
-<script src="<!-- tmpl_var Self_URL -->?f=screen&screen=installer-dada_mail.js" type="text/javascript"></script>
+<script  type="text/javascript" src="<!-- tmpl_var Self_URL -->?f=screen&screen=installer-jquery-ui-1.9.1.custom.min.js"></script>
+<script  type="text/javascript" src="<!-- tmpl_var Self_URL -->?f=screen&screen=installer-dada_mail.js"></script>
 	
 <!-- end installer_extra_javascript_widget.tmpl -->
