Fixes some design kludges.

--- a/dada/templates/plugins/bridge/default.tmpl
+++ b/dada/templates/plugins/bridge/default.tmpl
@@ -322,7 +322,7 @@ General
 
  <table width="100%" cellspacing="0" cellpadding="5">
   <tr>
-   <td>
+    <td width="20">
     <input name="disable_discussion_sending" id="disable_discussion_sending" type="checkbox" value="1" <!--tmpl_if list_settings.disable_discussion_sending -->checked="checked"<!--/tmpl_if--> />
    </td>
    <td>
@@ -448,7 +448,7 @@ General
 
  <table width="100%" cellspacing="0" cellpadding="5">
   <tr> 
-   <td> 
+   <td width="20">
     <input name="rewrite_anounce_from_header" id="rewrite_anounce_from_header" type="checkbox" value="1" <!--tmpl_if list_settings.rewrite_anounce_from_header -->checked="checked"<!--/tmpl_if--> /> 
    </td>
    <td>
@@ -479,7 +479,7 @@ General
 
  <table width="100%" cellspacing="0" cellpadding="5">
   <tr> 
-   <td>
+ <td width="20">
     <input name="group_list" id="group_list" type="checkbox" value="1" <!--tmpl_if list_settings.group_list -->checked="checked"<!--/tmpl_if--> /> 
    </td>
    <td>
@@ -494,7 +494,7 @@ General
   	 <table width="100%" cellspacing="0" cellpadding="5">
   </tr>
    <tr> 
-   <td>
+   <td width="20">
     <input name="mail_discussion_message_to_poster" id="mail_discussion_message_to_poster" type="checkbox" value="1" <!--tmpl_if list_settings.mail_discussion_message_to_poster -->checked="checked"<!--/tmpl_if--> />
    </td>
    <td>
@@ -598,7 +598,7 @@ General
  <legend>List Moderation Options</legend> 
   <table width="100%" cellspacing="0" cellpadding="5">    
   <tr> 
-   <td> 
+    <td width="20"> 
     <input name="enable_moderation" id="enable_moderation" type="checkbox" value="1" <!--tmpl_if list_settings.enable_moderation -->checked="checked"<!--/tmpl_if--> /> 
    </td>
    <td>
