Small changes for the beta release.

--- a/dada/templates/plugins/tracker/default.tmpl
+++ b/dada/templates/plugins/tracker/default.tmpl
@@ -131,7 +131,7 @@
 			<p><code>&lt;?dada redirect url=&quot;http://example.com&quot; ?&gt;</code></p>
 
 			<p>HTML Example:</p> 
-			<p><code>&lt;a href=&quot;&lt;?dada redirect url=&quot;http://example.com&quot; ?&gt;&quot;Click Here!&lt;/a&gt;</code></p>
+			<p><code>&lt;a href=&quot;&lt;?dada redirect url=&quot;http://example.com&quot; ?&gt;&quot;&gt;Click Here!&lt;/a&gt;</code></p>
 			
 			</fieldset>
 		</div> 
