Slight change in verbiage

--- a/dada/templates/plugins/tracker/default.tmpl
+++ b/dada/templates/plugins/tracker/default.tmpl
@@ -126,7 +126,7 @@
 		
 		<div id="tracker_noauto_parse_links_info"> 
 			<fieldset> 
-			<p>Tag Links you would like to track, with the Clickthrough Tag. For example:</p>
+			<p>Tag links you would like to track, with the special <strong>Redirect Tag</strong>. For example:</p>
 			
 			<p><code>&lt;?dada redirect url=&quot;http://example.com&quot; ?&gt;</code></p>
 
