Trying to make the, "Add/Invite/Subscribe" screens to work as best as I can.

--- a/dada/templates/add_screen.tmpl
+++ b/dada/templates/add_screen.tmpl
@@ -226,7 +226,7 @@
 	  <label for="new_email_file">
 	   upload
 	  </label>
-	  a text file in the same <strong>CSV format</strong> mentioned above.
+	  a text file (<strong><!-- tmpl_var HTML_CHARSET --> encoded</strong>) in the same <strong>CSV format</strong> mentioned above.
 	 </p>
 
 
