Fixed a bug in the template, The, "OK!" (close) button didn't do anything.

--- a/dada/templates/profile_fields.tmpl
+++ b/dada/templates/profile_fields.tmpl
@@ -41,7 +41,7 @@
 	<!-- /tmpl_if --> 
 	
 	<div style="text-align: center;">
-	<input type="button" class="small_button" value="Ok!" onClick="Effect.Fade('changes_saved_dialog_box');" />
+	<input type="button" class="small_button fade_me" value="Ok!" />
 	</div>
 
 	</div> 
