Updates to file name changes, etc

--- a/dada/templates/admin_template.tmpl
+++ b/dada/templates/admin_template.tmpl
@@ -9,7 +9,7 @@
 
   <title><!-- tmpl_var title --> - <!-- tmpl_var list_settings.list_name --> - <!-- tmpl_var PROGRAM_NAME --></title>
  
-  <link rel="stylesheet" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/default.css" type="text/css" media="screen" />
+  <link rel="stylesheet" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/dada_mail.css" type="text/css" media="screen" />
 
 
 <!-- tmpl_if load_google_viz --> 
@@ -58,8 +58,8 @@
 
 <!-- tmpl_if load_modalbox --> 
 	<!-- ModalBox -->
-	<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/prototype_scriptaculous_package.js"></script>
-	<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/modalbox.js" type="text/javascript"></script>
+	<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/prototype/prototype_scriptaculous_package.js"></script>
+	<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/prototype/modalbox.js" type="text/javascript"></script>
 	<link rel="stylesheet" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/modalbox.css" type="text/css"  media="screen" />
 <!-- /tmpl_if -->
 
