--- a/dada/templates/example_dada_config.tmpl
+++ b/dada/templates/example_dada_config.tmpl
@@ -308,7 +308,7 @@ $ADMIN_MENU = [
 					},
 
 					{
-					-Title      => 'Monitor Your Mailings <!-- tmpl_var LT_CHAR -->!-- tmpl_var list_mailouts --<!-- tmpl_var GT_CHAR -->/<!-- tmpl_var LT_CHAR -->!-- tmpl_var total_mailouts --<!-- tmpl_var GT_CHAR -->',
+					-Title      => 'Monitor Your Mailings',
 					-Title_URL  => "$S_PROGRAM_URL?f=sending_monitor",
 					-Function   => 'sending_monitor',
 					-Activated  => 1,
