It's annoying to disable input fields, as sometimes the option is, "enabled", and then the env changes, and there's no way to now disable the feature.

--- a/dada/templates/list_options_screen.tmpl
+++ b/dada/templates/list_options_screen.tmpl
@@ -908,7 +908,7 @@ Unsubscription Confirmations
 	 <table cellspacing="5" >
 	  <tr>
 	   <td>
-	    <input type="checkbox" name="mx_check" id="mx_check" value="1" <!-- tmpl_if list_settings.mx_check -->checked="checked"<!--/tmpl_if--> <!-- tmpl_unless can_use_mx_lookup -->disabled="disabled"<!--/tmpl_unless--> />
+	    <input type="checkbox" name="mx_check" id="mx_check" value="1" />
 	   </td>
 	   <td> 
 	    <p>
