Comment out the error dump in the configure screen.

--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -54,11 +54,13 @@
 </div> 
 <!-- /tmpl_if --> 
 
- 
+ <!-- tmpl_if comment --> 
+
 	<!-- tmpl_loop errors --> 
 		<p>Error <!-- tmpl_var error --> 
 	<!-- /tmpl_loop --> 
 
+<!-- /tmpl_if --> 
 
 	<!-- tmpl_if test_complete_dada_files_dir_structure_exists --> 
 
