This heap of changes removes us completely from using the Prototype and Scriptaculous JavaScript libraries, as well as moving from the Modalbox Prototype "plugin" to using the Colorbox jQuery plugin.

--- a/dada/templates/archive_index_nav_table_widget.tmpl
+++ b/dada/templates/archive_index_nav_table_widget.tmpl
@@ -22,7 +22,7 @@
   <td valign="top" align="center" width="33%"> 
    <p>
     <strong>
-		<a href="<!-- tmpl_var PROGRAM_URL -->?flavor=<!-- tmpl_var flavor_label -->;<!-- tmpl_var list_settings.list -->">
+		<a href="<!-- tmpl_var PROGRAM_URL -->/<!-- tmpl_var flavor_label -->/<!-- tmpl_var list_settings.list -->/">
 			Index
 		</a>
 	</strong>
