--- a/dada/templates/send_url_email_message_body_help_widget.tmpl
+++ b/dada/templates/send_url_email_message_body_help_widget.tmpl
@@ -1,6 +1,9 @@
 <!-- begin send_url_email_message_body_help_widget.tmpl --> 
 
-<div id="message_body_help" style="display:none">
+<div  style="display:none"> 
+
+
+<div id="message_body_help">
 
 <h2>
 	Send a Webpage Best Practices:
@@ -43,11 +46,8 @@
 
 </ul>
 
-<div style="text-align: center;">
-	<input value="Thanks!" onclick="Modalbox.hide()" type="button" class="small_button" />
+	</div>
 	
 </div> 
 
-	</div>
-	
 <!-- end send_email_message_body_help_widget --> 
