--- a/dada/templates/admin_template.tmpl
+++ b/dada/templates/admin_template.tmpl
@@ -56,12 +56,8 @@
 	<!-- /tmpl_if -->
 <!-- /tmpl_if --> 
 
-<!-- tmpl_if load_modalbox --> 
-	<!-- ModalBox -->
-	<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/prototype/prototype_scriptaculous_package.js"></script>
-	<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/prototype/modalbox.js" type="text/javascript"></script>
-	<link rel="stylesheet" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/modalbox.css" type="text/css"  media="screen" />
-<!-- /tmpl_if -->
+	<link rel="stylesheet" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/colorbox/colorbox.css">
+	<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/colorbox/jquery.colorbox-min.js"></script>
 
 
 </head>
