--- a/dada/templates/send_email_message_body_help_widget.tmpl
+++ b/dada/templates/send_email_message_body_help_widget.tmpl
@@ -1,6 +1,8 @@
 <!-- begin send_email_message_body_help_widget.tmpl --> 
 
-<div id="message_body_help" style="display:none">
+<div  style="display:none"> 
+	
+<div id="message_body_help">
 
 <h2>
  <!-- tmpl_var PROGRAM_NAME --> supports sending messages formatted in HTML, Plaintext, or both!
@@ -34,10 +36,7 @@
 
 </ul>
 
-<div style="text-align: center;">
-	<input value="Thanks!" onclick="Modalbox.hide()" type="button" class="small_button" />
-</div> 
-
 	</div>
+</div>
 	
 <!-- end send_email_message_body_help_widget --> 
