--- a/dada/templates/send_email_screen.tmpl
+++ b/dada/templates/send_email_screen.tmpl
@@ -2,7 +2,7 @@
 
 <!-- tmpl_set name="title" value="Mass Mailing &#187; Send a Message" -->
 <!-- tmpl_set name="load_wysiwyg_editor" value="1" -->
-<!-- tmpl_set name="load_modalbox" value="1" -->
+
 
 <div id="screentitle"> 
 	<div id="screentitlepadding">
@@ -48,8 +48,7 @@
 	  
 <!-- tmpl_include message_headers_fieldset_widget.tmpl --> 
 <fieldset> 
-<!-- <legend>Message Body [<a href="#" class="message_body_help">?</a>]</legend>-->
-<legend>Message Body [<a href="#" onclick="Modalbox.show($('message_body_help'), {title: 'Message Body Help', width: 640, height:325}); return false;">?</a>]</legend>
+ <legend>Message Body [<a href="#" onclick="$jq.colorbox({inline:true, href:$jq('#message_body_help')})">?</a>]</legend>
 
 
 	
