Since we don't use Prototype, we don't need to run in "noConflict" mode anymore, so let's not.

--- a/dada/templates/send_email_screen.tmpl
+++ b/dada/templates/send_email_screen.tmpl
@@ -48,7 +48,7 @@
 	  
 <!-- tmpl_include message_headers_fieldset_widget.tmpl --> 
 <fieldset> 
- <legend>Message Body [<a href="#" onclick="$jq.colorbox({inline:true, href:$jq('#message_body_help')})">?</a>]</legend>
+ <legend>Message Body [<a href="#" onclick="$.colorbox({inline:true, href:$('#message_body_help')})">?</a>]</legend>
 
 
 	
