--- a/dada/templates/send_url_email_screen.tmpl
+++ b/dada/templates/send_url_email_screen.tmpl
@@ -71,7 +71,7 @@
 	
 	<fieldset> 
 		<!-- <legend>Message Body [<a href="#" class="message_body_help">?</a>]</legend>-->
-		 <legend>Message Body [<a href="#" onclick="$jq.colorbox({inline:true, href:$jq('#message_body_help')})">?</a>]</legend>
+		 <legend>Message Body [<a href="#" onclick="$.colorbox({inline:true, href:$('#message_body_help')})">?</a>]</legend>
 
 		<div id="tabs"> 
 
