--- a/dada/installer-disabled/templates/installer_extra_javascript_widget.tmpl
+++ b/dada/installer-disabled/templates/installer_extra_javascript_widget.tmpl
@@ -3,7 +3,7 @@
 <!-- jQuery -->
 <script  type="text/javascript" src="<!-- tmpl_var Self_URL -->?f=screen&screen=installer-jquery-1.8.2.min.js"></script>
 <script  type="text/javascript">
-	var $jq = jQuery.noConflict();
+	var $ = jQuery.noConflict();
 </script> 
 <script  type="text/javascript" src="<!-- tmpl_var Self_URL -->?f=screen&screen=installer-jquery-ui-1.9.1.custom.min.js"></script>
 <script  type="text/javascript" src="<!-- tmpl_var Self_URL -->?f=screen&screen=installer-dada_mail.js"></script>
