These changes try to straighten out the, "is this a test, or not?" logic when parsing bounces via the web interface. It also closes up a problem, where tests via the web interface were being counted as NOT tests, which screws up all sorts of things, such as reports, etc.

--- a/dada/templates/plugins/bounce_handler/default.tmpl
+++ b/dada/templates/plugins/bounce_handler/default.tmpl
@@ -54,7 +54,10 @@ these message report summaries.</p>
 </legend> 
 
 <form action="<!-- tmpl_var Plugin_URL -->" id="parse_bounces_form">
-<input type="checkbox" name="bounce_test" id="bounce_test" value="bounces" /><label for="test"><label for="bounce_test">Test With Awaiting Messages</label>
+<input type="checkbox" name="test" id="test" value="bounces" />
+<label for="test">
+	Test With Awaiting Messages
+</label>
 <p>
 	<label for="parse_amount">
 		Review
