--- a/dada/templates/plugins/tracker/message_report.tmpl
+++ b/dada/templates/plugins/tracker/message_report.tmpl
@@ -41,7 +41,7 @@
 	<fieldset> 
 	<legend>The Basics</legend> 
 
-	<div style=" border: 1px solid black;">
+	<div style="border: 1px solid black;">
  	<table class="stripedtable">
 	<tr> 
 	<td>
@@ -51,8 +51,8 @@
      </strong> 
     </p>
 	</td> 
-	<td align="right"> 
-	 </p> 
+	<td> 
+	 <p style="text-align:right"> 
 	<!-- tmpl_if num_subscribers --> 
 		<!-- tmpl_var num_subscribers -->
 	<!-- tmpl_else --> 
@@ -72,8 +72,8 @@
 	  </strong> 
 	 </p> 
 	 </td> 
-	 <td align="right"> 
-	 <p>
+	 <td> 
+	 <p style="text-align:right"> 
 	  <a href="#" class="to_clickthroughs"><!-- tmpl_var clickthroughs --></a>
 	 </p>
 	</td> 
@@ -88,8 +88,8 @@
 	  </strong> 
 	 </p> 
 	 </td> 
-	 <td align="right"> 
-	 <p>
+	 <td> 
+	 <p style="text-align:right"> 
 	  <a href="#" class="to_opens">
 		<!-- tmpl_var opens -->
 	 </a> 
@@ -107,8 +107,8 @@
 	  </strong> 
 	 </p> 
 	 </td> 
-	 <td align="right"> 
-	 <p>
+	 <td> 
+	 <p style="text-align:right"> 
 	  <a href="#" class="to_archive_views"><!-- tmpl_var view_archive --></a> 
 	 </p>
 	</td> 
@@ -124,8 +124,8 @@
 	  </strong> 
 	 </p> 
 	 </td> 
-	 <td align="right"> 
-	 <p>
+	 <td> 
+	 <p style="text-align:right"> 
 	  <a href="#" class="to_forwards"><!-- tmpl_var forward_to_a_friend --></a>
 	 </p>
 	</td> 
@@ -140,8 +140,8 @@
 	  </strong> 
 	 </p> 
 	 </td> 
-	 <td align="right"> 
-	 <p>
+	 <td> 
+	 <p style="text-align:right"> 
 	  <a href="#" class="to_bounces"><!-- tmpl_var soft_bounce default="0" -->/<!-- tmpl_var hard_bounce  default="0" --></a>
 	 </p>
 	</td> 
