This makes the, "use the auto batch setting for Amazon SES" work. Drrrrrrrr.

--- a/dada/templates/mass_mailing_preferences_screen.tmpl
+++ b/dada/templates/mass_mailing_preferences_screen.tmpl
@@ -87,7 +87,7 @@
 		  <td>
 		 
 	
-		  <input type="checkbox" id="amazon_ses_auto_batch_settings" id="amazon_ses_auto_batch_settings" value="1" <!-- tmpl_if list_settings.amazon_ses_auto_batch_settings -->checked="checked"<!--/tmpl_if--> />
+		  <input type="checkbox" name="amazon_ses_auto_batch_settings" id="amazon_ses_auto_batch_settings" value="1" <!-- tmpl_if list_settings.amazon_ses_auto_batch_settings -->checked="checked"<!--/tmpl_if--> />
 		</td>
 		<td>
 		<p><label for="amazon_ses_auto_batch_settings">
