This allows you to add email addresses to something other than the Subscribers List. DERRRRRRRRR

--- a/dada/templates/add_email_screen.tmpl
+++ b/dada/templates/add_email_screen.tmpl
@@ -608,7 +608,7 @@ Invalid Email Addresses
 			<input type="submit" <!-- tmpl_unless list_settings.enable_mass_subscribe -->disabled="disabled" class="disabled"<!-- tmpl_else -->class="processing addingemail warnAboutMassSubscription"<!-- /tmpl_unless -->  name="process"  value="Subscribe Checked Addresses >>" />	
 		<!-- /tmpl_if --> 
 	<!-- tmpl_else --> 
-		<input type="submit" class="processing" name="process"  value="Add Checked Addresses to <!-- tmpl_var type_title --> >>" />
+		<input type="submit" class="processing addingemail" name="process"  value="Add Checked Addresses to <!-- tmpl_var type_title --> >>" />
 	<!-- /tmpl_if -->
 	 </div>
 	 <div class="floatclear"></div>
