s/Sending Preferences/Sending Options/ (and friends)

--- a/dada/templates/adv_sending_preferences_screen.tmpl
+++ b/dada/templates/adv_sending_preferences_screen.tmpl
@@ -1,6 +1,6 @@
 <!-- begin adv_sending_preferences_screen.tmpl -->
 
-<!-- tmpl_set name="title" value="Mail Sending &#187; Advanced Sending Preferences" -->
+<!-- tmpl_set name="title" value="Mail Sending &#187; Advanced Options" -->
 <div id="screentitle"> 
 	<div id="screentitlepadding">
 		<!-- tmpl_var title --> 
