--- a/dada/templates/sending_tuning_options.tmpl
+++ b/dada/templates/sending_tuning_options.tmpl
@@ -5,7 +5,7 @@
   Mail Sending
 	&#187;
    <a href="<!-- tmpl_var S_PROGRAM_URL -->?f=sending_preferences">
-	Sending Preferences 
+	Sending Options 
   </a>
  &#187;
 
@@ -325,7 +325,7 @@
 
 <p>
  <a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=adv_sending_preferences">
-  &lt;-- Back to Advanced Sending Preferences...
+  &lt;-- Back to Advanced Options...
  </a>
 </p>
 
