There was a solid red border around these tables? Really?

--- a/dada/static/css/dada_mail.css
+++ b/dada/static/css/dada_mail.css
@@ -798,8 +798,7 @@ li.archive_badges_li {
 }
 
 .stripedtable {
-	border: 1px solid red; /* for testing. */
-
+	/*border: 1px solid red;*/ /* for testing. */
 	border-collapse: collapse;
 	background-color: #fff;
 	width: 100%;
