Got rid of the buggy overflow: stuff in the <tbody>

--- a/dada/templates/view_list_table_widget.tmpl
+++ b/dada/templates/view_list_table_widget.tmpl
@@ -87,7 +87,7 @@
   </tr>
 </thead>
 
-<tbody style=" height: 200px; overflow: auto;"> 
+<tbody> 
 <!-- tmpl_loop subscribers -->
 	   
 	   <tr <!-- tmpl_if __odd__ -->class="alt"<!--/tmpl_if-->>
