Small Doc changes.

--- a/dada/templates/list_options_screen.tmpl
+++ b/dada/templates/list_options_screen.tmpl
@@ -1,6 +1,6 @@
 <!-- begin list_options_screen.tmpl -->
 
-<!-- tmpl_set name="title" value="Your Mailing List &#187; Mailing List Options" -->
+<!-- tmpl_set name="title" value="Your Mailing List &#187; Options" -->
 
 <div id="screentitle"> 
 	<div id="screentitlepadding">
