Link updates and title fixes.

--- a/dada/templates/adv_archive_options_screen.tmpl
+++ b/dada/templates/adv_archive_options_screen.tmpl
@@ -1,6 +1,6 @@
 <!-- begin adv_archive_options_screen.tmpl -->
 
-<!-- tmpl_set name="title" value="Advanced Archive Options" -->
+<!-- tmpl_set name="title" value="Advanced Options" -->
 
 
 <div id="screentitle"> 
@@ -207,7 +207,7 @@ Email Address Protection
    <label for="archive_protect_email_spam_me_not">
     Spam-Me-Not
    </label>
-   <a href="http://www.zapyon.de/spam-me-not/" target="_blank">
+   <a href="http://paula.edmiston.org/nb/spamx/help.html" target="_blank">
     (More Info)
    </a>
   </td>
