--- a/dada/templates/sending_monitor_index_screen.tmpl
+++ b/dada/templates/sending_monitor_index_screen.tmpl
@@ -1,6 +1,6 @@
 <!-- begin sending_monitor_index_screen.tmpl --> 
 
-<!-- tmpl_set name="title" value="Mass Mailing Monitor &#187; Your Mailings" -->
+<!-- tmpl_set name="title" value="Mass Mailing Monitor &#187; Monitor Your Mailings" -->
 
 <div id="screentitle"> 
 	<div id="screentitlepadding">
