--- a/dada/templates/sending_preferences_screen.tmpl
+++ b/dada/templates/sending_preferences_screen.tmpl
@@ -2,7 +2,7 @@
 
 
 
-<!-- tmpl_set name="title" value="Mail Sending &#187; Sending Preferences" -->
+<!-- tmpl_set name="title" value="Mail Sending &#187; Options" -->
 
 
 
