Uh, more… initial work on token stuff.

--- a/dada/templates/confirm_captcha_step_screen.tmpl
+++ b/dada/templates/confirm_captcha_step_screen.tmpl
@@ -31,7 +31,7 @@
 
  <input type="hidden" name="email" value="<!-- tmpl_var email -->" /> 
 
- <input type="hidden" name="pin" value="<!-- tmpl_var pin -->" /> 
+ <input type="hidden" name="token" value="<!-- tmpl_var token -->" /> 
 
 
  <p>
