Make this a little nicer.

--- a/dada/templates/error_token_problem_screen.tmpl
+++ b/dada/templates/error_token_problem_screen.tmpl
@@ -1,3 +1,19 @@
 <!-- begin error_token_problem_screen -->
-	<p>There's a problem with your request. Token stuff.</p>
+<p>Your confirmation link doesn't seem to be working.</p> 
+
+<p>This may be because:</p> 
+
+<ul> 
+	<li>
+		<p>
+			It's been visiting already - have you already been confirmed?
+		</p>
+	</li>
+	<li>
+		<p>
+			Was the entire confirmation link followed? 
+		</p>
+	</li>
+
+</ul>
 <!-- end error_token_problem_screen -->
