Finishing up the first pass of this feature…

--- a/dada/templates/error_token_problem_screen.tmpl
+++ b/dada/templates/error_token_problem_screen.tmpl
@@ -4,16 +4,25 @@
 <p>This may be because:</p> 
 
 <ul> 
-	<li>
-		<p>
-			It's been visiting already - have you already been confirmed?
-		</p>
-	</li>
+	
 	<li>
 		<p>
 			Was the entire confirmation link followed? 
 		</p>
 	</li>
-
+	
+	<li>
+		<p>
+			Has it been visiting already? Have you already been confirmed?
+		</p>
+	</li>
+	
+	<li>
+		<p>
+			Did you resend a confirmation email? Have you followed the link in the most recent confirmation email? 
+		</p>
+	</li>
+	
+	
 </ul>
 <!-- end error_token_problem_screen -->
