--- a/dada/templates/resend_conf_captcha_step.tmpl
+++ b/dada/templates/resend_conf_captcha_step.tmpl
@@ -1,22 +1,20 @@
 <!-- begin resend_conf_captcha_step.tmpl --> 
 
 <!-- tmpl_set name="title" value="Subscription Almost Complete" -->
-<!-- tmpl_unless captcha_auth --> 
-<p class="error"> 
- The letters you've submitted didn't seem to correspond to the letters in the image. Please try again:
-</p>
-<!-- /tmpl_unless --> 
-
-
-
 
 <!-- tmpl_set name="title" value="Problems with Confirmation Request" -->
 <!-- tmpl_set name="show_profile_widget" value="0" -->
 
 
+<h1>What Happened?</h1> 
+
+<!-- tmpl_if expr="rm eq 's'" --> 
 <p>
- It seems that you were recently sent a confirmation to subscribe to: 
+	You recently asked to be subscribed to: 
 </p>
+<!-- tmpl_else --> 
+	You recently asked to be removed from: 
+<!-- /tmpl_if --> 
 
 <p>
  <blockquote> 
@@ -26,7 +24,9 @@
  </blockquote> 
  
 <p>
- Please double-check your inbox for this confirmation email. 
+ A confirmation email has been sent and the confirmation URL within that email needs to be followed. 
+
+Please double-check your inbox for this confirmation email. 
 </p>
 
 <p>If you did not receive this confirmation, make sure that this email 
@@ -49,7 +49,7 @@ address: </p>
  <strong> 
   whitelist
  </strong>
- .
+ . Then, ask to be resent the confirmation email.
 </p>
 
 <p>
@@ -60,34 +60,45 @@ address: </p>
  </strong> 
 </p>
 
+<h1>Resend the Confirmation Email</h1> 
+
+
 <p>
  You may resend this confirmation by solving the CAPTCHA, below: 
 </p>
 
-<p> 
- As the final step, please type in the string of letters that you see in the below image into the text box:
-</p>
+<fieldset> 
+
+<!-- tmpl_if expr="captcha_auth == 0" --> 
+	<div class="badweatherbox"> 
+		<p> 
+		 CAPTCHA wasn't solved. Please try again:
+		</p>
+	</div>
+<!-- /tmpl_if --> 
+
 
 <form action="<!-- tmpl_var PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->"> 
 
 
-<!-- tmpl_var CAPTCHA_string --> 
+	<!-- tmpl_var CAPTCHA_string --> 
 
 
- <input type="hidden" name="flavor" value="<!-- tmpl_var flavor -->" /> 
- <input type="hidden" name="list"   value="<!-- tmpl_var list -->" /> 
- <input type="hidden" name="email"  value="<!-- tmpl_var email -->" /> 
- <input type="hidden" name="token"  value="<!-- tmpl_var token -->" /> 
+	 <input type="hidden" name="flavor" value="<!-- tmpl_var flavor -->" /> 
+	 <input type="hidden" name="list"   value="<!-- tmpl_var list -->" /> 
+	 <input type="hidden" name="email"  value="<!-- tmpl_var email -->" /> 
+	 <input type="hidden" name="token"  value="<!-- tmpl_var token -->" /> 
 
 
-  <input type="hidden" name="rm" value="<!-- tmpl_var rm -->" />
+	  <input type="hidden" name="rm" value="<!-- tmpl_var rm -->" />
 
- <p>
-  <input type="submit" value="Resend Confirmation" class="processing" /> 
- </p>
+	 <p>
+	  <input type="submit" value="Resend Confirmation" class="processing" /> 
+	 </p>
 
 </form> 
 
+</fieldset> 
 
 
 <!-- end resend_conf_captcha_step.tmpl --> 
