--- a/dada/templates/profile_home.tmpl
+++ b/dada/templates/profile_home.tmpl
@@ -244,7 +244,7 @@ function confirm_profile_removal(form_name) {
 	</li>
 	<li>
 		<p>
-		<a href="<!-- tmpl_var PROGRAM_URL -->?f=u&list=<!-- tmpl_var list_settings.list -->&email=<!-- tmpl_var profile.email -->">
+		<a href="<!-- tmpl_var PROGRAM_URL -->?f=u&list=<!-- tmpl_var list_settings.list -->&email=<!-- tmpl_var profile.email escape="URL" -->">
 			Unsubscribe from this list
 		</a>
 	</p>
